# rigid-transform-kit

./: .gitignore  README.md  pyproject.toml
data/robot/fanuc_r2000ic_description/: CMakeLists.txt  README.md  package.xml
data/vision/0302_dataset/: palletizing_robot.picking_zone_camera.calibration.yml
datasets/aw_pallet/: box_pcd1.ply  box_pcd2.ply  box_pcd3.ply  box_pcd4.ply  box_pcd5.ply  box_pcd6.ply  calibration_result.yml  cam_targets.json  cam_targets_simple.json  intrinsics.json
datasets/output/: tcp_poses.json
datasets/pallet_sample1/: picking_zone_camera_20260227_022130_suction_pts.json
datasets/pasto_picking/: calibration_result.yml  intrinsics.json  run_checkerboard.bat  run_checkerboard.sh
datasets/yonggin2/: run_pallet_box.bat  run_pallet_box.sh
datasets/yonggin_pasto/: run_pallet_box.bat
examples/: multi_eye_view.py  pallet_box_fanuc_tcp.py  pallet_box_tcp.py  picking_pipeline.py  visualize_pallet_box.py  visualize_pallet_sample.py  visualize_pick_checkerBoard.py  visualize_pipeline.py  visualize_robot_urdf.py
scripts/visualizer/: load_rrd.py
src/rigid_transform_kit/: __init__.py
src/rigid_transform_kit/app/: __init__.py  io.py  pallet.py
src/rigid_transform_kit/core/: __init__.py  frame.py  geometry.py  transform.py
src/rigid_transform_kit/robot/: __init__.py  base.py  fanuc.py  tcp.py
src/rigid_transform_kit/vision/: __init__.py  camera.py  pick.py
src/rigid_transform_kit/viz/: __init__.py  urdf_viewer.py  visualizer.py
src/utils/: __init__.py  checkerboard.py  dataset_loader.py  pcd_processing.py
(+1 files in other folders)
